<resources>
    <string name="app_name">TLink PTaxi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="about_us">A propos de nous</string>
    <string name="settings">Paramètres</string>
    <string name="order">Accueil</string>
    <string name="offers">Offres</string>
    <string name="profile">Profile</string>
    <string name="walk_pos1">Un chauffeur est à votre disposition en un clique pour toutes vos destinations.</string>
    <string name="title_walk1">Commandez un chauffeur</string>
    <string name="title_walk2">Transportez votre marchandise</string>
    <string name="walk_pos2">On vous offre une transportation garantie de votre marchandise quelque soit son type.</string>
    <string name="go_login">Allez vers login</string>
    <string name="connecter">Connectez vous a votre compte</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="pas_de_compte">J\'ai pas un compte</string>
    <string name="confirmer">Confirmer</string>
    <string name="suivant">Suivant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="telephone">Téléphone</string>
    <string name="telephone1">Téléphone 1</string>
    <string name="telephone2">Téléphone 2</string>
    <string name="email">Email</string>
    <string name="confirmer_votre_compte">Confirmer votre compte</string>
    <string name="c_est_pas_mon_compte">C\'est pas mon compte</string>
    <string name="creer_compte">Créer votre compte</string>
    <string name="terms_et_conditions">J\'accept tous les terms et les conditions de l\'application</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="code">Code</string>
    <string name="title_walkpos3">Transport medical</string>
    <string name="description_pos3">Un transport médical est à votre service pour tout les cas urgents.</string>
    <string name="title_walk_pos4">Service de covoiturage</string>
    <string name="description_pos4">Un service de covoiturage est disponible pour tout vos planning de sortie.</string>
    <string name="description_pos5">\"Avec Sirius T link votre satisfaction est notre ultime responsabilité \"</string>
    <string name="choisir_une_option">Choisir une option</string>
    <string name="chauffeur">Chauffeur</string>
    <string name="marchandise">Marchandise</string>
    <string name="covoiturage">Covoiturage</string>
    <string name="transportmedical">Transport medical</string>
    <string name="transport_medical">Transport medical</string>
    <string name="commander_marchandise">Commander Marchandise</string>
    <string name="commander_taxi">Commander Taxi</string>
    <string name="autre_date">Autre date</string>
    <string name="entrez_l_adresse">Entrez l\'adresse</string>
    <string name="adresse_de_d_part">Adresse de départ</string>
    <string name="adresse_de_destination">Adresse de destination</string>
    <string name="recherche_en_cours">Recherche en cours...</string>
    <string name="annuler_la_recherche">Annuler la recherche</string>
    <string name="s_lectionner_une_offre">Sélectionner une offre</string>
    <string name="votre_note">Votre note</string>
    <string name="ecrire_une_note">Ecrire une note</string>
    <string name="places">Places</string>
    <string name="name">Nom et prénom</string>
    <string name="mail">Email</string>
    <string name="supprimerCompte">Supprimer compte</string>
    <string name="choix_taille">Choisissez une taille :</string>
    <string name="petite">petite</string>
    <string name="moyenne">moyenne</string>
    <string name="grande">grande</string>
    <string name="type_marchandise">Choisissez un type de marchandise : </string>
    <string name="quantite">Choisissez la quantité :</string>
    <string name="next_marchandise">Next</string>
    <string name="suivi_march">Suivi du transport </string>
    <string name="suivi1">Démarrage du véhicule transportateur</string>
    <string name="suivi2">Récupération de la marchandise </string>
    <string name="suivi3">Arrivage de la marchandise à la destination </string>
    <string name="Pconsulter">Consulter demandes </string>
    <string name="Poffre">Mes offres </string>
    <string name="Noffre">Nouvelle Offre</string>
    <string name="Preservation">Mes Trajets</string>
    <string name="dcnx">Se déconnecter </string>
    <string name="reporter">Reporter </string>
    <string name="client">Client : </string>
    <string name="date">10/10/2020</string>
    <string name="heure">15:10 </string>
    <string name="de">De : </string>
    <string name="depart">Depart</string>
    <string name="vers">Vers : </string>
    <string name="dest">Déstination</string>
    <string name="faire_offre">Faire une offre </string>
    <string name="mes_offre">Mes offres </string>
    <string name="detail">Détail de la demande </string>
    <string name="appeler">Appeler </string>
    <string name="arrive">Vous etes arrivés !</string>
    <string name="apayer">Total à payer est : 650DA</string>
    <string name="price">650DA</string>
    <string name="PconsulterOffre">Consulter mes offres</string>
    <string name="citer_prix">Introduisez le prix du trajet : </string>
    <string name="votre_prix">prix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


<!--Vehicle-->
    <string name="saisir_vehicule">Saisir les informations de votre véhicule</string>
    <string name="num_immat">N\° Immatricualtion</string>
    <string name="num_chassis">N\° Cahssis</string>
    <string name="model">Modèle</string>
    <string name="marque">Marque</string>
    <string name="type">Type</string>

</resources>