<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="200dp"
android:layout_gravity="bottom"
android:background="@drawable/view_background">
<TextView
    android:id="@+id/textView11"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:text="@string/arrive"
    android:textAlignment="center"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<ImageView
    android:id="@+id/imageView3"
    android:layout_width="31dp"
    android:layout_height="29dp"
    android:layout_marginStart="96dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.327"
    app:srcCompat="@drawable/ic_taxi_noir" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="82dp"
    android:layout_height="17dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="56dp"
    android:layout_marginEnd="160dp"
    android:text="@string/client"
    android:textSize="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/imageView3"
    app:layout_constraintTop_toTopOf="parent" />


<TextView
    android:id="@+id/textView16"
    android:layout_width="82dp"
    android:layout_height="17dp"
    android:layout_marginTop="8dp"
    android:text="@string/depart"
    android:textSize="10sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.416"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView14" />

<TextView
    android:id="@+id/textView17"
    android:layout_width="82dp"
    android:layout_height="17dp"
    android:layout_marginBottom="10dp"
    android:text="@string/dest"
    android:textSize="10sp"
    app:layout_constraintBottom_toTopOf="@+id/confirm_note_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.416"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView16" />

<TextView
    android:id="@+id/textView14"
    android:layout_width="60dp"
    android:layout_height="20dp"
    android:layout_marginStart="60dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="8dp"
    android:text="@string/date"
    android:textSize="10sp"
    app:layout_constraintBottom_toTopOf="@+id/textView16"
    app:layout_constraintEnd_toStartOf="@+id/textView15"
    app:layout_constraintStart_toEndOf="@+id/imageView3"
    app:layout_constraintTop_toBottomOf="@+id/textView1" />

<TextView
    android:id="@+id/textView15"
    android:layout_width="82dp"
    android:layout_height="17dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="100dp"
    android:text="@string/heure"
    android:textSize="10sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/textView14"
    app:layout_constraintTop_toBottomOf="@+id/textView1" />

<Button
    android:id="@+id/apayer"
    style="@style/button_style"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="20dp"
    android:drawableEnd="@drawable/ic_next"
    android:drawablePadding="8dp"
    android:drawableTint="@color/white"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:text="@string/apayer"
    android:textSize="18sp"
    android:theme="@style/button_style"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/note_demand" />
</androidx.constraintlayout.widget.ConstraintLayout>