<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_container"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:background="@drawable/button_background"
    android:backgroundTint="?android:attr/colorBackground"
    android:elevation="2dp">
    
    <ImageView
        android:id="@+id/imageVieworder"
        android:layout_width="31dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        app:srcCompat="@drawable/ic_taxi_noir" />

    <TextView
        android:id="@+id/cust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/client"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageVieworder"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:text="@string/client"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cust"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />


    <TextView
        android:id="@+id/de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="0dp"
        android:text="@string/de"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf ="@id/cust"
        app:layout_constraintTop_toBottomOf="@+id/cust"/>

    <TextView
        android:id="@+id/depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/depart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/de"
        app:layout_constraintTop_toBottomOf="@+id/cust"/>

    <TextView
        android:id="@+id/vers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/vers"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/depart"
        app:layout_constraintTop_toBottomOf="@+id/cust"/>

    <TextView
        android:id="@+id/dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/dest"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/vers"
        app:layout_constraintTop_toBottomOf="@+id/cust"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf ="@id/de"
        app:layout_constraintTop_toBottomOf="@+id/de" />

    <TextView
        android:id="@+id/heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/heure"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/de" />

    <Button
        android:id="@+id/faire_offre"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd ="20dp"
        android:drawableEnd="@drawable/ic_next"
        android:drawablePadding="8dp"
        android:drawableTint="@color/white"
        android:text="@string/faire_offre"
        android:textSize="14dp"
        android:theme="@style/button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"  />

</androidx.constraintlayout.widget.ConstraintLayout>