<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.sirius.net.ptaxi.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/view_background"
        tools:context=".ui.login.LoginFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/connecter"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/input_background"
                    android:drawableStart="@drawable/ic_account"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:maxLength="10"
                    android:hint="@string/telephone"
                    android:inputType="phone"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp" />

                <EditText
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/input_background"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp" />

                <Button
                    android:id="@+id/forgotten_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/transparent"
                    android:text="@string/mot_de_passe_oubli"
                    android:textAllCaps="false"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/login_button"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/confirmer"
                    android:textSize="18sp"
                    android:theme="@style/button_style" />

                <Button
                    android:id="@+id/register_launch_button"
                    style="@style/button_style_outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="24dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/pas_de_compte" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
